objects/ITBsalutations__Salutation_Definition__c.object
<CustomObject>
    <description>Definitions for Salutation (Letter Salutation, Address Salutation...)</description>
    <fields>
        <fullName>ITBsalutations__Academic_Title__c</fullName>
        <label>Academic Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITBsalutations__Additional_Salutation_1__c</fullName>
        <label>Additional Salutation 1</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ITBsalutations__Additional_Salutation_2__c</fullName>
        <label>Additional Salutation 2</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ITBsalutations__Additional_Salutation_3__c</fullName>
        <label>Additional Salutation 3</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ITBsalutations__Address_Salutation__c</fullName>
        <description>Address Salutation Text. Please use the notation {!field} for merge fields. e.g. Dear Mr. {!LastName}</description>
        <inlineHelpText>Address Salutation Text. Please use the notation {!field} for merge fields. e.g. Dear Mr. {!LastName}</inlineHelpText>
        <label>Address Salutation</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ITBsalutations__Key_Combination__c</fullName>
        <description>The key combination used for contact salutations. e.g. Language|Salutation|Gender...</description>
        <inlineHelpText>The key combination used for contact salutations. e.g. Language|Salutation|Gender...</inlineHelpText>
        <label>Key Combination</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ITBsalutations__Letter_Salutation__c</fullName>
        <description>Letter Salutation Text. Please use the notation {!field} for merge fields. e.g. Dear Mr. {!LastName}</description>
        <inlineHelpText>Letter Salutation Text. Please use the notation {!field} for merge fields. e.g. Dear Mr. {!LastName}</inlineHelpText>
        <label>Letter Salutation</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <label>Salutation Definition</label>
    <listViews>
        <fullName>ITBsalutations__All</fullName>
        <columns>NAME</columns>
        <columns>ITBsalutations__Key_Combination__c</columns>
        <columns>ITBsalutations__Address_Salutation__c</columns>
        <columns>ITBsalutations__Letter_Salutation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SD-{0000000000}</displayFormat>
        <label>Salutation Definition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salutation Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>